# plant-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plants.example.yaml  pyproject.toml
.github/workflows/: container.yml  homelab-sre-investigate.yml
docs/: architecture.md  configuration.md  security.md
plant_monitor/: __init__.py  cli.py  condition_engine.py  config.py  discovery.py  ha.py  llm_text.py  logging_config.py  main.py  models.py  monitor.py  notification_planner.py  notify.py  policy.py  rules.py  runtime_state.py  status.py  thresholds.py  watering.py  web.py
scripts/: README.md  build_image.sh  deploy_remote.sh  install_local.sh
tests/: test_condition_engine.py  test_config.py  test_discovery.py  test_ha.py  test_llm_text.py  test_monitor_alerts.py  test_monitor_connection.py  test_monitor_scheduled_jobs.py  test_notify.py  test_rules.py  test_runtime_state.py  test_watering.py  test_web.py
